--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 /*  your css code here. If applicable */
 body{
-	background: rgba(0, 0, 0, 0);
+	background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%  / auto padding-box border-box;
 }
