--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
 /*  your css code here. If applicable */
-.container>.content{
-	text-align: center;
-	color: white;
-	
+.h1{
+	text-color: white;
 }
